[workspace]
members = [
  "examples",
  "lib",
  "lib_v2",
  "mcts",
  "blokus",
  "tzf8",
  "chess_",
  "ml"
]

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
rand = "*"
graphviz-rust = "*"
num = "*"
num-traits = "*"
num-derive = "*"
serde = {version = "*", features = ["derive"]}
serde_with = "*"
tokio = {version = "*", features = ["sync", "rt", "rt-multi-thread"]}
futures = "*"