[workspace]
members = [
  "examples",
  "experiment",
  "lib",
  "mcts",
  "blokus",
  "tzf8",
  "connection",
  "chess_",
  "ml",
  "sat"
]

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
rand = "*"
graphviz-rust = "*"
serde = {version = "*", features = ["derive"]}
serde_with = "*"
# tokio = {version = "*", features = ["sync", "rt", "rt-multi-thread"]}
crossbeam = "*"
futures = "*"
text_io = "*"
fixedbitset = "*"