[package]
name = "blokus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_with.workspace = true
num-traits.workspace = true
num-derive.workspace = true
lib = {path = "../lib"}