[package]
name = "chess_"
version.workspace =  true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "*"
lib = {path = "../lib"}
mcts = {path = "../mcts"}
lib_v2 = {path = "../lib_v2"}
tokio.workspace = true