[package]
name = "connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = {path = "../lib"}
mcts = {path = "../mcts"}
fixedbitset.workspace = true
text_io.workspace = true

[[bin]]
name = "connect4"