[package]
name = "mcts"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = {path = "../lib"}
rand.workspace = true
crossbeam.workspace = true
graphviz-rust.workspace = true
futures.workspace = true