[package]
name = "ml"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = {path = "../lib"}
mcts = {path = "../mcts"}
examples = {path = "../examples"}
futures = "*"
rand.workspace = true
serde.workspace = true
serde_with.workspace = true